add_executable(cssbeautify cssbeautify.cpp)
link_directories(${EIGHTPACK_PATH})
target_link_libraries(cssbeautify eightpack)
set_target_properties(cssbeautify PROPERTIES COMPILE_FLAGS ${EIGHTPACK_COMPILE_FLAGS})
set_target_properties(cssbeautify PROPERTIES LINK_FLAGS ${EIGHTPACK_LINK_FLAGS})
install(TARGETS cssbeautify DESTINATION bin)
