add_executable(jsbeautify jsbeautify.cpp)
link_directories(${EIGHTPACK_PATH})
target_link_libraries(jsbeautify eightpack)
set_target_properties(jsbeautify PROPERTIES COMPILE_FLAGS ${EIGHTPACK_COMPILE_FLAGS})
set_target_properties(jsbeautify PROPERTIES LINK_FLAGS ${EIGHTPACK_LINK_FLAGS})
install(TARGETS jsbeautify DESTINATION bin)
