add_executable(jslint jslint.cpp)
link_directories(${EIGHTPACK_PATH})
target_link_libraries(jslint eightpack)
set_target_properties(jslint PROPERTIES COMPILE_FLAGS ${EIGHTPACK_COMPILE_FLAGS})
set_target_properties(jslint PROPERTIES LINK_FLAGS ${EIGHTPACK_LINK_FLAGS})
install(TARGETS jslint DESTINATION bin)
